%% QForge database schema after M2 — Paper generation (the algorithm)
%% NEW in M2: papers, paper_questions
%% (unchanged since M1: users, subjects, units, questions, blueprints)
erDiagram
    USERS ||--o{ BLUEPRINTS : owns
    USERS ||--o{ PAPERS : owns
    SUBJECTS ||--o{ UNITS : "has"
    SUBJECTS ||--o{ QUESTIONS : "scopes"
    SUBJECTS ||--o{ BLUEPRINTS : "targets"
    SUBJECTS ||--o{ PAPERS : "for"
    UNITS ||--o{ QUESTIONS : "groups"
    UNITS ||--o{ PAPER_QUESTIONS : "tags"
    BLUEPRINTS ||--o{ PAPERS : "generates"
    PAPERS ||--o{ PAPER_QUESTIONS : "contains"
    QUESTIONS ||--o{ PAPER_QUESTIONS : "appears in"

    USERS {
        bigint id PK
        string name
        string email UK
        enum role "teacher|admin"
        string password
        timestamps created_updated
    }

    SUBJECTS {
        bigint id PK
        string code UK
        string name
        text description
        longtext syllabus
        timestamps created_updated
    }

    UNITS {
        bigint id PK
        bigint subject_id FK
        string name
        int position
        timestamps created_updated
    }

    QUESTIONS {
        bigint id PK
        bigint subject_id FK
        bigint unit_id FK
        string type "short|long|mcq"
        int marks
        enum difficulty "nullable"
        longtext text
        enum source "extracted|ai|manual"
        enum status "pending|approved|rejected"
        json attributes "nullable"
        int used_count
        timestamps created_updated
    }

    BLUEPRINTS {
        bigint id PK
        bigint owner_id FK
        bigint subject_id FK
        string name
        int total_marks
        int duration
        bool ai_assist
        json definition
        timestamp last_used_at
        timestamps created_updated
    }

    PAPERS {
        bigint id PK
        bigint owner_id FK
        bigint blueprint_id FK "nullable (M3.1)"
        enum origin "generated|imported (M3.1)"
        bigint subject_id FK
        string name
        int total_marks
        int duration
        enum status "draft|saved|exported"
        int export_count
        timestamp generated_at
        timestamps created_updated
    }

    PAPER_QUESTIONS {
        bigint id PK
        bigint paper_id FK
        bigint question_id FK
        bigint unit_id FK
        string section_label
        int display_no
        int marks
        bool is_ai
    }
